update Server source file of project
Signed-off-by: lwd <15991983675@163.com>

--- a/LogStorage_Server/src/server/makefile
+++ b/LogStorage_Server/src/server/makefile
@@ -1,3 +1,5 @@
-s.o:Server.c
-	gcc -c Server.c -o s.o
-	mv s.o ../../obj/server/
+all:main.o
+	make -C init
+main.o:main.c
+	gcc -c main.c -o main.o -I ../../include/ 
+	mv main.o ../../obj/server/ 
